...
    <string name="teachers_back">Назад</string>
    <string name="parity_both">Обе</string>
    <string name="teacher_parity_both">Обе недели</string>
    <string name="teacher_parity_odd">Нечётная неделя</string>
    <string name="teacher_parity_even">Чётная неделя</string>
    <string name="teacher_parity_unknown">Чётность не указана</string>
    <string name="teacher_my_group">Моя группа</string>
    <string name="parity_odd_short">Нечёт</string>
    <string name="parity_even_short">Чёт</string>
    <string name="friends_max">Максимум пять групп</string>
    <string name="friends_intersections">Пересечения</string>
    <string name="friends_strictness">Строгость</string>
    <string name="strict_uni">в вузе</string>
...
